# OpenPoly

./: .env.example  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  demo-pages.yml
docs/architecture/: 00-overview.md  01-isolation.md  02-strategy-sections.md  03-system-config.md  04-wallet-config.md  05-runtime-network-risk.md  06-polymarket-api.md
frontend/: README.md  index.html  package.json  vite.config.demo.ts  vite.config.ts
openpoly/: __init__.py
scripts/: deploy.sh  run_pipeline.py
tests/: conftest.py  test_api_analyzer_connectivity.py  test_api_autostart.py  test_api_canvas.py  test_api_catalog.py  test_api_inspect.py  test_api_market_source.py  test_api_mode_switch.py  test_api_news.py  test_api_news_source.py  test_api_portfolio.py  test_api_portfolio_close.py  test_api_runtime_log.py  test_api_secrets.py  test_api_wallet.py  test_canvas_store.py  test_db_book_store.py  test_db_embedding_store.py  test_db_engine.py  test_db_manager.py  test_db_news_store.py  test_db_portfolio_store.py  test_db_writer.py  test_embedding_manager.py  test_execution_dispatcher.py  test_executor.py  test_exit_monitor.py  test_live_executor.py  test_llm_client.py  test_market_api.py  test_market_book.py  test_market_book_sampling.py  test_market_filters.py  test_market_models.py  test_market_source_manager.py  test_market_store.py  test_news_manager.py  test_news_ring_buffer.py  test_news_secrets.py  test_news_ws_client.py  (+16 more)
(+174 files in other folders)
