[project]
name = "openpoly"
version = "0.0.0"
description = "Experimental Polymarket live-trading system."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "KoNananachan" }]
maintainers = [{ name = "KoNananachan" }]
keywords = ["polymarket", "prediction-markets", "trading", "fastapi", "react", "sqlite"]
dependencies = [
    "anthropic>=0.104.0",
    "eth-account>=0.13",
    "fastapi>=0.115",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.8",
    "py-clob-client-v2==1.0.1rc1",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
    "web3>=6",
    "websockets>=14",
]

[project.urls]
Homepage = "https://github.com/KoNananachan/OpenPoly"
Repository = "https://github.com/KoNananachan/OpenPoly"
Issues = "https://github.com/KoNananachan/OpenPoly/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff==0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openpoly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
